# py-gopro-sync

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/gopro_sync/: __init__.py  __main__.py  cli.py  client.py  core.py  media.py
src/gopro_sync/mocks/: html_raw.py
tests/: pygopro_sync_test.py
