[tool.poetry]
name = "gopro-sync"
version = "0.1.0"
description = ""
authors = ["binary-signal <binary-signal@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
lxml = "^4.6.3"
click = "^8.0.1"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4"
rich = "^10.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.13.0"


[tool.poetry.scripts]
gopro-sync = "gopro_sync.__main__:gopro_sync_cli"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
